2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* README.en (Required environment): Update required version of
	APEL to 10.7 or later.

	* SEMI-CFG (PACKAGEDIR): Use
	`install-get-default-package-directory'.

2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-CFG (PACKAGEDIR): Avoid an error with Emacs.

2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-MK (compile-semi-package): Use
	batch-update-directory-autoloads if it is available instead of
	batch-update-directory.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-CFG (PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies and configure-package-path
	as well as (early|late|last)-packages.

2006-12-02  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mime-edit.el (mime-edit-process-multipart-1): Don't insert a
	text tag if a multipart end tag is followed.

2006-06-23  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mime-view.el (mime-calist::field-match-method-ignore-case):
	New function; set up for `field-match-method' of calist.

2006-02-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-delete-trailing-whitespace): New
	Function for RFC3156.
	(mime-edit-sign-pgp-mime): Use it.

2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-messages-locale): New user option.
	(pgg-gpg-process-region): Set environment variable LC_ALL when
	pgg-gpg-messages-locale is specified.

	* pgg-def.el (pgg-messages-locale): New user option.

	* mime-pgp.el (mime-verify-application/pgp-signature): Copy
	messages from pgg-errors-buffer.
	(mime-add-application/pgp-keys): Ditto.

2005-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>
