@@ -1,3 +1,15 @@
+2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mime-edit.el (turn-on-mime-edit): Don't use the default values
+	of paragraph-start and paragraph-separate.  Suggested by Ron
+	Isaacson <Ron.Isaacson@morganstanley.com>.  cf.
+	http://article.gmane.org/gmane.mail.wanderlust.general.japanese/5721
+
+2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mime-edit.el (turn-on-mime-edit): Make paragraph-start and
+	paragraph-separate buffer-local.
+
 2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
 
 	* README.en (Required environment): Update required version of
